--- a/BigNumber/BigNumber/BigNumber.vcxproj
+++ b/BigNumber/BigNumber/BigNumber.vcxproj
@@ -111,6 +111,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="CBigNumber.h" />
+    <ClInclude Include="CMyStack.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
